core/unpackaged/main/default/objects/ZVC__CCI_Presence_Status_Relationship__c/ZVC__CCI_Presence_Status_Relationship__c.object-meta.xml
<CustomObject>
    <label>CCI Presence Status Relationship</label>
    <nameField>
        <label>CCI Presence Status Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCI Presence Status Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>