core/unpackaged/main/default/objects/ZVC__CCI_Presence_Status_Relationship__c/fields/ZVC__CCI_Presence_Status_Category__c.field-meta.xml
<CustomField>
    <fullName>ZVC__CCI_Presence_Status_Category__c</fullName>
    <label>CCI Presence Status Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>