core/unpackaged/main/default/objects/ZVC__CCI_Presence_Status_Relationship__c/fields/ZVC__Create_Date__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Create_Date__c</fullName>
    <label>Create Date</label>
    <type>DateTime</type>
</CustomField>