core/unpackaged/main/default/objects/ZVC__CCI_Presence_Status_Relationship__c/fields/ZVC__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Relationship_Type__c</fullName>
    <description>1: SF to CCI
2: CCI to SF</description>
    <label>Relationship Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>