core/unpackaged/main/default/objects/ZVC__CCI_Presence_Status_Relationship__c/fields/ZVC__SF_Presence_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__SF_Presence_Status__c</fullName>
    <label>SF Presence Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>